publish crewai example on naptha

--- a/stock_analysis/.env.example
+++ b/stock_analysis/.env.example
@@ -2,3 +2,9 @@ SERPER_API_KEY=KEY # https://serper.dev/ (free tier)
 BROWSERLESS_API_KEY=KEY # https://www.browserless.io/ (free tier)
 SEC_API_API_KEY=KEY # https://sec-api.io/ (free tier)
 OPENAI_API_KEY=KEY
+
+HUB_USER=
+HUB_PASS=
+HUB_URL=ws://node.naptha.ai:3001/rpc
+
+NODE_URL=http://node.naptha.ai:7001
