--- a/stock_analysis/pyproject.toml
+++ b/stock_analysis/pyproject.toml
@@ -6,10 +6,12 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.12,<=3.13"
+python = ">=3.12,<3.13"
 crewai = {extras = ["tools"], version = "^0.41.1"}
 python-dotenv = "^1.0.1"
 html2text = "^2024.2.26"
+naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk"}
+sec-api = "^1.0.22"
 
 [tool.poetry.scripts]
 stock_analysis = "stock_analysis.main:run"
