--- a/stock_analysis/pyproject.toml
+++ b/stock_analysis/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "financial_agent"
-version = "v0.1.0"
+name = "stock_analysis"
+version = "0.1.0"
 description = ""
 authors = []
 readme = "README.md"
